syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Protos/WorkerRunStatus/workerRunStatus.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.WorkerRuns";

message WorkerRun {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    int32 workerInfoId = 6;
    WorkerRunStatus status = 7;
    google.protobuf.Timestamp startDateTime = 8;
    google.protobuf.Timestamp endDateTime = 9;
    string data = 10;
    string result = 11;
    string resultData = 12;
}

message WorkerRunPageModel {
    repeated WorkerRun pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}